fix for the Stream function - used the animmon one